--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,3 @@
-asttokens==2.2.1
-backcall==0.2.0
-colorama==0.4.6
-decorator==5.1.1
-exceptiongroup==1.1.2
-executing==1.2.0
-iniconfig==2.0.0
-ipython==8.14.0
-jedi==0.19.0
-matplotlib-inline==0.1.6
-packaging==23.1
-parso==0.8.3
-pickleshare==0.7.5
-pluggy==1.2.0
-prompt-toolkit==3.0.39
-pure-eval==0.2.2
-Pygments==2.15.1
+click==8.1.7
 PyInputPlus==0.2.12
-PySimpleValidate==0.2.12
 pytest==7.4.0
-six==1.16.0
-stack-data==0.6.2
-stdiomask==0.0.6
-tomli==2.0.1
-traitlets==5.9.0
-wcwidth==0.2.6
